# dictation-ia-locale

./: CLAUDE.md  LICENSE  README.md  TODO.md  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
_bmad-output/implementation-artifacts/: 1-2-transcription-vocale-francais.md  1-3-nettoyage-automatique-texte-regles-fr.md  1-4-collage-automatique-curseur-actif.md  2-1-son-confirmation-activation-arret.md  8-1-structuration-intelligente-texte-transcrit.md  epic-1-retrospective.md  epic-4-retro-2026-02-27.md  epic-5-retro-2026-02-27.md  sprint-status.yaml
_bmad-output/planning-artifacts/: epics.md  prd.md  ux-design.md
docs/: dev-log.md  project-structure.md  technical-review-final.md  technical-review.md
docs/adr/: 001-backend-language.md
docs/ml/: finetune_qwen25_colab.ipynb
docs/specs/: functional-spec.md
implementation-artifacts/: tech-spec-dictation-ia-locale-mvp.md
scripts/: build-whisper.sh
src/: App.css  App.tsx  bindings.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: accessibility.rs  actions.rs  clipboard.rs  lib.rs  main.rs  overlay.rs  settings.rs  transcription_coordinator.rs  tray.rs  whisper_ffi.rs  whisper_wrapper.c
src-tauri/src/audio_toolkit/vad/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/llm/: cleanup.rs  mod.rs
src-tauri/src/managers/: audio.rs  history.rs  model.rs  transcription.rs
src-tauri/src/pipeline/: mod.rs  modes.rs  orchestrator.rs  rules.rs
src-tauri/src/shortcut/: handy_keys.rs  mod.rs  single_key.rs  tauri_impl.rs
src-tauri/swift-plugin/: AccessibilityPaste.swift  MenuBar.swift  WhisperANE.swift
src-tauri/tests/: benchmark.rs  vad_benchmark.rs
src/components/: Sidebar.tsx
src/components/footer/: Footer.tsx
src/components/icons/: DictationLogo.tsx
src/components/model-selector/: ModelSelector.tsx
src/components/onboarding/: AccessibilityOnboarding.test.tsx  AccessibilityOnboarding.tsx  ModelCard.test.tsx  ModelCard.tsx  Onboarding.tsx  QuickTest.test.tsx  QuickTest.tsx
src/components/settings/: AudioFeedback.tsx  HandyKeysShortcutInput.tsx  SoundPicker.tsx  TriggerKeySelector.tsx  WriteModeSelector.tsx  index.ts
src/components/settings/about/: AboutSettings.tsx
src/components/settings/accueil/: AccueilSettings.tsx
src/components/settings/general/: GeneralSettings.tsx  ModelSettingsCard.tsx
src/components/settings/history/: HistorySettings.test.tsx  HistorySettings.tsx
src/components/ui/: OllamaBanner.test.tsx  OllamaBanner.tsx  PrivacyBadge.test.tsx  PrivacyBadge.tsx
src/components/update-checker/: UpdateChecker.tsx
src/config/: writeModes.ts
src/overlay/: RecordingOverlay.css  RecordingOverlay.tsx
src/stores/: settingsStore.ts
src/test/: helpers.tsx  setup.ts  smoke.test.ts
{output_folder}/implementation-artifacts/: 1-1-demarrer-arreter-dictee-raccourci-clavier.md  sprint-status.yaml
{output_folder}/planning-artifacts/: architecture.md  epics.md
(+19 files in other folders)
