[package]
name = "dictation-ia"
version = "0.1.0"
description = "Dictation IA Locale — Dictée vocale francophone local-first"
authors = ["Uhama"]
edition = "2021"
license = "MIT"
default-run = "dictation-ia"

[profile.dev]
incremental = true

[lib]
name = "dictation_ia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
cc = "1"

[dependencies]
once_cell = "1"
tauri = { version = "2.9.1", features = [
  "protocol-asset",
  "macos-private-api",
  "tray-icon",
  "image-png",
] }
tauri-plugin-log = "2.7.1"
tauri-plugin-opener = "2.5.2"
tauri-plugin-store = "2.4.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-fs = "2.4.4"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-single-instance = "2.3.2"
tauri-plugin-autostart = "2.5.1"

rusqlite_migration = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = { git = "https://github.com/rustdesk-org/rdev" }

# Audio
cpal = "0.16"
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false }
rodio = { git = "https://github.com/cjpais/rodio.git" }
rubato = "0.16"
rustfft = "6.4.0"

# Async
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# STT — transcribe-rs whisper only (temporaire, remplacé par whisper_ffi en Task 3-5)
transcribe-rs = { version = "0.2.5", features = ["whisper"] }

# Collage clavier (temporaire, remplacé par Swift Accessibility en Task 14)
enigo = "0.6.1"

# LLM — Qwen2.5-0.5B via llama.cpp
llama-cpp-2 = { version = "0.1", optional = true }

# Utilitaires
anyhow = "1"
env_filter = "0.1"
hound = "3.5"
natural = "0.5"
regex = "1"
chrono = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
tar = "0.4.44"
flate2 = "1.0"
strsim = "0.11.0"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
handy-keys = "0.2.1"
clap = { version = "4", features = ["derive"] }
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
log = "0.4"

[features]
default = []
llm = ["llama-cpp-2"]

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

[patch.crates-io]
tauri-runtime = { git = "https://github.com/cjpais/tauri.git", branch = "handy-2.9.1" }
tauri-runtime-wry = { git = "https://github.com/cjpais/tauri.git", branch = "handy-2.9.1" }
tauri-utils = { git = "https://github.com/cjpais/tauri.git", branch = "handy-2.9.1" }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
